data/derived/comb/progs/unify/prog7604.ml.out
Characters 483-484:
  | NewOp2(e1) -> 1 /. sin(pi *. eval(e1,x,y));;
                  ^
Error: This expression has type int but an expression was expected of type
         float
